Document -Pep
Add explicit documentation for the Error Prone profile.

JIRA: ODLPARENT-336
Change-Id: I2fe19dc1162fb1302e936af21b9cabe8e12df007
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>